--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:offline": "pnpm run build && serverless offline",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "deploy": "pnpm run build && serverless deploy",
+    "package": "serverless package",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -23,16 +26,20 @@
     "db:stop": "docker compose down"
   },
   "dependencies": {
+    "@codegenie/serverless-express": "4.16.0",
     "@nestjs/axios": "^3.1.1",
     "@nestjs/common": "10.0.0",
+    "@nestjs/config": "3.3.0",
     "@nestjs/core": "10.0.0",
     "@nestjs/mapped-types": "2.0.5",
     "@nestjs/platform-express": "10.0.0",
     "@nestjs/typeorm": "10.0.2",
+    "aws-lambda": "1.0.7",
     "axios": "^1.7.7",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "date-fns": "4.1.0",
+    "esbuild-plugin-env": "1.1.1",
     "mysql2": "3.11.4",
     "reflect-metadata": "0.2.0",
     "rxjs": "7.8.1",
@@ -40,9 +47,9 @@
   },
   "devDependencies": {
     "@nestjs/cli": "10.0.0",
-    "@nestjs/config": "3.3.0",
     "@nestjs/schematics": "10.0.0",
     "@nestjs/testing": "10.0.0",
+    "@types/aws-lambda": "8.10.145",
     "@types/express": "5.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.3.1",
@@ -54,6 +61,9 @@
     "eslint-plugin-prettier": "5.0.1",
     "jest": "29.5.0",
     "prettier": "3.0.0",
+    "serverless": "4.4.7",
+    "serverless-dotenv-plugin": "6.0.0",
+    "serverless-offline": "14.3.4",
     "source-map-support": "0.5.21",
     "supertest": "7.0.0",
     "ts-jest": "29.1.0",
