--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,6 @@
 service: softek-serverless
 
-# useDotenv: true
+useDotenv: true
 
 plugins:
   - serverless-offline
@@ -41,15 +41,16 @@ build:
     #   # Whether to set the NODE_OPTIONS on functions to enable sourcemaps on Lambda
     #   setNodeOptions: true
 
-# package:
-#   individually: true
-#   exclude:
-#     - ../../node_modules/**
-#     - ./src/**
-#     - ./test/**
-#     - .serverless/**
-#     - .serverless_plugins/**
-#   include:
+package:
+  individually: true
+  exclude:
+    - ../../node_modules/**
+    - ./src/**
+    - ./test/**
+    - .serverless/**
+    - .serverless_plugins/**
+  include:
+    - .env
 #     - '../../node_modules/@nestjs/common/**'
 #     - '../../node_modules/@nestjs/core/**'
 #     - '../../node_modules/@nestjs/schematics/**'
@@ -75,7 +76,6 @@ build:
 #     - '../../node_modules/express/**'
 #     - '../../node_modules/multer/**'
 #     - '../../node_modules/@vendia/**'
-#     # - .env
 
 provider:
   name: aws
@@ -84,6 +84,13 @@ provider:
   memorySize: 1024
   timeout: 29
   stage: 'dev'
+  environment:
+    DATABASE_HOST: ${DATABASE_HOST}
+    DATABASE_PORT: ${DATABASE_PORT}
+    DATABASE_NAME: ${DATABASE_NAME}
+    DATABASE_USER: ${DATABASE_USER}
+    DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+
 
 functions:
   main:
