--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "start:offline": "pnpm run build && serverless offline",
+    "start:offline": "pnpm run build && serverless offline --stage qa",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "deploy": "pnpm run build && serverless deploy",
+    "deploy": "pnpm run build && serverless deploy --stage prod",
+    "remove": "serverless remove --qa",
+    "remove:prod": "serverless remove --prod",
     "package": "serverless package",
     "test": "jest",
     "test:watch": "jest --watch",
