--- a/serverless.yml
+++ b/serverless.yml
@@ -43,12 +43,12 @@ build:
 
 package:
   individually: true
-  exclude:
-    - ../../node_modules/**
-    - ./src/**
-    - ./test/**
-    - .serverless/**
-    - .serverless_plugins/**
+  # exclude:
+  #   - ../../node_modules/**
+  #   - ./src/**
+  #   - ./test/**
+  #   - .serverless/**
+  #   - .serverless_plugins/**
   include:
     - .env
 
@@ -58,7 +58,7 @@ provider:
   region: us-east-1
   memorySize: 1024
   timeout: 29
-  stage: 'dev'
+  stage: ${opt:stage}
   environment:
     DATABASE_HOST: ${env:DATABASE_HOST}
     DATABASE_PORT: ${env:DATABASE_PORT}
@@ -73,10 +73,8 @@ functions:
       - http:
           method: ANY
           path: /
-          integration: lambda
           cors: true
       - http:
           method: ANY
           path: '{proxy+}'
-          integration: lambda
           cors: true
