--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "start:prod": "node dist/main",
     "start:offline": "pnpm run build && serverless offline --stage qa",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "deploy": "pnpm run build && serverless deploy --stage prod",
-    "remove": "serverless remove --qa",
+    "deploy:qa": "pnpm run build && serverless deploy --stage qa",
+    "deploy:prod": "pnpm run build && serverless deploy --stage prod",
+    "remove:qa": "serverless remove --qa",
     "remove:prod": "serverless remove --prod",
     "package": "serverless package",
     "test": "jest",
