feat: load API_URL endpoint in prod mode from .env

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ DATABASE_ROOT_PASSWORD=
 DATABASE_NAME=
 DATABASE_USER=
 DATABASE_PASSWORD=
+
+## Agregar esta variable luego de desplegar el proyecto con Serverless Framework
+API_URL=
