feat: update command scripts

--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "start:offline": "pnpm run build && serverless offline --stage qa",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "deploy:qa": "pnpm run build && serverless deploy --stage qa",
-    "deploy:prod": "pnpm run build && serverless deploy --stage prod",
-    "remove:qa": "serverless remove --qa",
-    "remove:prod": "serverless remove --prod",
-    "package": "serverless package",
+    "deploy": "pnpm run build && serverless deploy --stage prod",
+    "offline": "pnpm run build && serverless offline --stage prod",
+    "remove": "serverless remove --prod",
+    "package": "serverless package --prod",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
