feat: implement bulk and create methods

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=
 
+## Database params
 DATABASE_HOST=
 DATABASE_PORT=
 DATABASE_ROOT_PASSWORD=
@@ -7,5 +8,8 @@ DATABASE_NAME=
 DATABASE_USER=
 DATABASE_PASSWORD=
 
+## Star Wars API
+SWAPI_API_URL=
+
 ## Agregar esta variable luego de desplegar el proyecto con Serverless Framework
-API_URL=
+BASE_API_URL=
