--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json --watch --detectOpenHandles",
+    "test:e2e": "jest --config ./test/jest-e2e.json --watchAll --detectOpenHandles",
     "db:init": "docker compose up -d",
     "db:stop": "docker compose down"
   },
