--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "deploy": "pnpm run build && serverless deploy --stage prod",
     "offline": "pnpm run build && serverless offline --stage prod",
-    "remove": "serverless remove --prod",
-    "package": "serverless package --prod",
+    "remove": "serverless remove --stage prod",
+    "package": "serverless package --stage prod",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
