--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/core": "10.0.0",
     "@nestjs/mapped-types": "2.0.5",
     "@nestjs/platform-express": "10.0.0",
+    "@nestjs/swagger": "8.0.3",
     "@nestjs/typeorm": "10.0.2",
     "aws-lambda": "1.0.7",
     "axios": "^1.7.7",
