docs: update env variables and add docs url

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-PORT=
+PORT=3000
 
 ## Database params
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_ROOT_PASSWORD=
-DATABASE_NAME=
-DATABASE_USER=
-DATABASE_PASSWORD=
+DATABASE_HOST=softek-rds-database.c7wqoc0om2p0.us-east-1.rds.amazonaws.com
+DATABASE_PORT=3306
+DATABASE_ROOT_PASSWORD=root
+DATABASE_NAME=softek_db
+DATABASE_USER=superadmin
+DATABASE_PASSWORD=Admin123456*
 
 ## Star Wars API
-SWAPI_API_URL=
+SWAPI_API_URL=https://swapi.py4e.com
 
 ## Agregar esta variable luego de desplegar el proyecto con Serverless Framework
-BASE_API_URL=
+BASE_API_URL=https://ngahyu3u43.execute-api.us-east-1.amazonaws.com
