docs: add examples with curl

--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,4 @@ DATABASE_PASSWORD=Admin123456*
 SWAPI_API_URL=https://swapi.py4e.com
 
 ## Agregar esta variable luego de desplegar el proyecto con Serverless Framework
-BASE_API_URL=https://ngahyu3u43.execute-api.us-east-1.amazonaws.com
+BASE_API_URL=https://p92xfml1ml.execute-api.us-east-1.amazonaws.com
