feat: rename endpoints

--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "deploy": "pnpm run build && serverless deploy --stage prod",
     "deploy:remove": "serverless remove --stage prod",
     "deploy:package": "serverless package --stage prod",
-    "test": "jest",
+    "test": "pnpm run test:unit && pnpm run test:e2e",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json --detectOpenHandles",
+    "test:unit": "jest --all",
+    "test:e2e": "jest --config ./test/jest-e2e.json --detectOpenHandles --all",
     "db:init": "docker compose up -d",
     "db:stop": "docker compose down"
   },
