--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,10 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "types": ["vitest/globals"],
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
