--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": "20.18.0"
+  },
   "scripts": {
     "deps": "pnpm db:stop && pnpm db:init",
     "build": "nest build",
@@ -28,16 +31,16 @@
   },
   "dependencies": {
     "@codegenie/serverless-express": "4.16.0",
-    "@nestjs/axios": "^3.1.1",
-    "@nestjs/common": "10.0.0",
+    "@nestjs/axios": "3.1.2",
+    "@nestjs/common": "10.4.8",
     "@nestjs/config": "3.3.0",
-    "@nestjs/core": "10.0.0",
-    "@nestjs/mapped-types": "2.0.5",
-    "@nestjs/platform-express": "10.0.0",
-    "@nestjs/swagger": "8.0.3",
+    "@nestjs/core": "10.4.8",
+    "@nestjs/mapped-types": "2.0.6",
+    "@nestjs/platform-express": "10.4.8",
+    "@nestjs/swagger": "7.4.2",
     "@nestjs/typeorm": "10.0.2",
     "aws-lambda": "1.0.7",
-    "axios": "^1.7.7",
+    "axios": "1.7.7",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "date-fns": "4.1.0",
@@ -48,13 +51,12 @@
     "typeorm": "0.3.20"
   },
   "devDependencies": {
-    "@nestjs/cli": "10.0.0",
-    "@nestjs/schematics": "10.0.0",
-    "@nestjs/testing": "10.0.0",
+    "@nestjs/cli": "10.4.7",
+    "@nestjs/schematics": "10.2.3",
+    "@nestjs/testing": "10.4.8",
     "@swc/core": "1.9.2",
     "@types/aws-lambda": "8.10.145",
     "@types/express": "5.0.0",
-    "@types/jest": "29.5.2",
     "@types/node": "20.3.1",
     "@types/supertest": "6.0.0",
     "@typescript-eslint/eslint-plugin": "8.0.0",
@@ -64,17 +66,15 @@
     "eslint": "8.57.1",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.1",
-    "jest": "29.5.0",
     "prettier": "3.0.0",
     "serverless": "4.4.7",
     "serverless-dotenv-plugin": "6.0.0",
     "source-map-support": "0.5.21",
     "supertest": "7.0.0",
-    "ts-jest": "29.1.0",
     "ts-loader": "9.4.3",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.1.3",
+    "typescript": "5.4.5",
     "unplugin-swc": "1.5.1",
     "vite-tsconfig-paths": "5.1.3",
     "vitest": "2.1.5"
