--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@codegenie/serverless-express": "4.16.0",
     "@nestjs/axios": "3.1.2",
+    "@nestjs/cache-manager": "2.3.0",
     "@nestjs/common": "10.4.8",
     "@nestjs/config": "3.3.0",
     "@nestjs/core": "10.4.8",
@@ -41,6 +42,7 @@
     "@nestjs/typeorm": "10.0.2",
     "aws-lambda": "1.0.7",
     "axios": "1.7.7",
+    "cache-manager": "5.7.6",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "date-fns": "4.1.0",
